Bring minutes back.

--- a/site/index.html
+++ b/site/index.html
@@ -102,6 +102,7 @@
 
             const map = [
               ['seconds', 'getSeconds', 60],
+              ['minutes', 'getMinutes', 60],
               ['hours', 'getHours', 24],
               ['days', 'getDate', getPrevMonthDays],
               ['months', 'getMonth', 12],
